# assistant

./: .gitignore  MANIFEST.in  README.md  README_TZ.md  __init__.py  address_book.py  assistant.py  command_handler.py  error_decorator.py  file_storage.py  helper_bot.py  main.py  pyproject.toml  requirements.txt  setup.py
assistant/: address_book.py  assistant.py  notebook.py
books/: books.py  notebook.py
record/: address.py  birthday.py  email.py  name.py  note.py  phone.py  record.py  tag.py
search/: engine.py
taipan_assistant/: main_cli.py
taipan_assistant/assistant/: application.py  assistant.py  command.py  command_handler.py  command_registry.py  error_decorator.py  output_formatter.py
taipan_assistant/command/: command.py  command_registry.py
taipan_assistant/contacts/: address_book.py  command_handler.py
taipan_assistant/contacts/record/: address.py  birthday.py  email.py  name.py  note.py  phone.py  record.py  tag.py
taipan_assistant/notebook/: note.py  notebook.py
